2010-10-06  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13650: Information disclosure in sys_actions (DB mount, usergroups) (thanks to Georg Ringer)
	* Fixed bug #15461: RemoveXSS exposes XSS vulnerability for double encoded characters (thanks to Marcus Krause)

2010-09-30  Francois Suter  <francois@typo3.org>

	* Fixed bug #15639: Scheduler: Add missing classes and interface to autoload registry (Thanks to Marcus Krause)

2010-09-30  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #12889: fe_adminLib.inc usages deprecated function split() (Thanks to Steffen Kamper)

2010-09-28  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.6

2010-09-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.0.5 to 1.0.6

2010-09-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15730: htmlArea RTE: Problem editing a new list entry in list of items with inline markup

2010-09-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15430: htmlArea RTE: Text not editable after pasting with server-based cleaning
	* Follow-up to bug #15430: htmlArea RTE: Text not editable after pasting with server-based cleaning
	* Fixed bug #15749: htmlArea RTE: Firefox shows &amp; in external links with query string

2010-09-25  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15748: BE input validation "time" rejects 0:00 and 24:00 (Thanks to Lars Peipmann)

2010-09-24  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15642: Wrong order of quote and escape in LIKE DB clause (Thanks to Marcus Krause)
	* Fixed bug #5983: Undefined variable is used in t3lib_BEfunc::exec_foreign_table_where_query
	* Fixed bug #15787: Misleading security message in extension manager (Thanks to Marcus Krause)

2010-09-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15653: Only show upload comments that are newer than installed version in update function of EM

2010-09-21  Benjamin Mack  <benni@typo3.org>
