@@ -2,6 +2,7 @@
 
 	* Fixed bug #13650: Information disclosure in sys_actions (DB mount, usergroups) (thanks to Georg Ringer)
 	* Fixed bug #15461: RemoveXSS exposes XSS vulnerability for double encoded characters (thanks to Marcus Krause)
+	* Follow-up to bug #15461: Added unit tests (thanks to Marcus Krause)
 
 2010-09-30  Francois Suter  <francois@typo3.org>
 
